--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filaments",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,5 +13,11 @@
     "joi": "^17.13.3",
     "knex": "^3.1.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@tsconfig/recommended": "^1.0.6",
+    "@types/lodash": "^4.17.5",
+    "eslint": "^9.5.0",
+    "typescript": "^5.5.2"
   }
 }
