--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filaments",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,8 +16,13 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.6",
+    "@types/chai": "^4.3.16",
     "@types/lodash": "^4.17.5",
+    "@types/mocha": "^10.0.7",
+    "chai": "^4.4.1",
     "eslint": "^9.5.0",
+    "mocha": "^10.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   }
 }
